tests/ui/concurrent_cached_redis_no_ttl.stderr
error: RedisCache requires a TTL (`ttl`/`ttl_secs`/`ttl_millis`) when `create` block is not specified
 --> tests/ui/concurrent_cached_redis_no_ttl.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
